unpackaged/main/default/objects/CareProgramEligibilityRule/fields/Care_Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Care_Program_Name__c</fullName>
    <formula>CareProgram.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Care Program Name</label>
    <type>Text</type>
</CustomField>