unpackaged/main/default/objects/CareProgramEligibilityRule/fields/Care_Program_Status__c.field-meta.xml
<CustomField>
    <fullName>Care_Program_Status__c</fullName>
    <formula>TEXT( CareProgram.Status )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Care Program Status</label>
    <type>Text</type>
</CustomField>