unpackaged/main/default/objects/CareProgramEligibilityRule/fields/Enrollment_Eligibility_Criteria_Name__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Eligibility_Criteria_Name__c</fullName>
    <formula>EligibilityCriteria.Name</formula>
    <label>Enrollment Eligibility Criteria Name</label>
    <type>Text</type>
</CustomField>