unpackaged/main/default/objects/CareProgramEligibilityRule/fields/Enrollment_Eligibility_Criteria_Need__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Eligibility_Criteria_Need__c</fullName>
    <formula>TEXT( EligibilityCriteria.Patient_Need__c )</formula>
    <label>Enrollment Eligibility Criteria Need</label>
    <type>Text</type>
</CustomField>