unpackaged/main/default/objects/CareProgramEligibilityRule/fields/Enrollment_Eligibility_Criteria_Status__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Eligibility_Criteria_Status__c</fullName>
    <formula>TEXT( EligibilityCriteria.Status )</formula>
    <label>Enrollment Eligibility Criteria Status</label>
    <type>Text</type>
</CustomField>