unpackaged/main/default/objects/CareProgramEligibilityRule/fields/Enrollment_Eligibility_Criteria_Type__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Eligibility_Criteria_Type__c</fullName>
    <formula>TEXT( EligibilityCriteria.Criteria_Type__c )</formula>
    <label>Enrollment Eligibility Criteria Type</label>
    <type>Text</type>
</CustomField>